cargo-features = ["named-profiles"]

[package]
name = "rv-md5"
version = "0.1.0"
authors = ["Romeu Vieira <romeu.bizz@gmail.com>"]
description = "MD5 RFC1321 and AVX2 implementations"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
codegen-units = 1
